# IPM-mapping-ros

./: CMakeLists.txt  README.md  package.xml
scripts/: IPM_config.py  ipm_node.py  transform_matrix.npy
src/: image2point.cpp  image_sub.cpp  pc_show.cpp  pcl_process.cpp  pcl_pub.cpp  pcl_view.cpp
